# task_management

./: .env.template  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
migration/: env.py
migration/versions/: 629ad1a67d8f_init.py
task_management/: app.py  dependencies.py  enums.py  errors.py
task_management/models/: tasks.py
task_management/orm/: session.py
task_management/repos/: tasks.py
task_management/schemas/: tasks.py
task_management/services/: tasks.py
task_management/settings/: db.py  settings.py
task_management/views/: tasks.py
tests/: conftest.py  faker.py
tests/repos/: test_tasks.py
tests/services/: test_tasks.py
tests/views/: test_tasks.py
